<resources>
    <string name="app_name">mathKeyboard</string>
    <string name="root">√</string>
    <string name="delete">DEL</string>
    <string name="check_sign">✓</string>
    <string name="potenz">a²</string>
    <string name="down">⇘</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="openRound">(</string>
    <string name="closingRound">)</string>
    <string name="minus">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="multiply">*</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="sin">sin</string>
    <string name="fraction">/</string>
    <string name="decimal">.</string>
    <string name="_0">0</string>
    <string name="x">x</string>
    <string name="e">e</string>
    <string name="cos">cos</string>
</resources>
