<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/kb_bt_bg"
        >
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt_plus"
            android:text="@string/plus"
            android:layout_marginTop="3dp"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt1"
            android:text="@string/_1"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt2"
            android:text="@string/_2"
            android:layout_marginTop="3dp"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt3"
            android:text="@string/_3"
            android:layout_marginTop="3dp"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt_klL"
            android:text="@string/openRound"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt_klR"
            android:text="@string/closingRound"
            android:layout_marginTop="3dp"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt_check"
            android:text="@string/check_sign"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/selector_check"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/kb_bt_bg"
        >
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt_minus"
            android:text="@string/minus"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt4"
            android:text="@string/_4"
            android:layout_marginLeft="8dp"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt5"
            android:text="@string/_5"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt6"
            android:text="@string/_6"
            />

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt_ln"
            android:text="@string/ln"
            android:layout_marginLeft="8dp"
            android:textAllCaps="false"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt_log"
            android:text="@string/log"
            android:textAllCaps="false"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt_del"
            android:text="@string/delete"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="3dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/kb_bt_bg">
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt_mult"
            android:text="@string/multiply"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt7"
            android:text="@string/_7"
            android:layout_marginLeft="8dp"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt8"
            android:text="@string/_8"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt9"
            android:text="@string/_9"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt_root"
            android:text="@string/root"
            android:layout_marginLeft="8dp"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt_pot"
            android:text="@string/potenz"
            android:textAllCaps="false"/>
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt_sin"
            android:text="@string/sin"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="3dp"
            android:textAllCaps="false"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/kb_bt_bg">
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt_frac"
            android:text="@string/fraction"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt_dec"
            android:text="@string/decimal"
            android:layout_marginLeft="8dp"
            android:textAllCaps="false"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt0"
            android:text="@string/_0"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/btX"
            android:text="@string/x"
            android:textAllCaps="false"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt_down"
            android:text="@string/down"
            android:layout_marginLeft="8dp"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bte"
            android:text="@string/e"
            android:textAllCaps="false"
            />
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/bt_cos"
            android:text="@string/cos"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="3dp"
            android:textAllCaps="false"
            />
    </LinearLayout>
</merge>